# AST

./: CMakeLists.txt  NOTES.md  build.py  main.cpp
include/: _pch.h
include/expression/: addition_node.h  binary_op_node.h  cos_node.h  division_node.h  equality_node.h  exponentiation_node.h  expr_helper.h  function_node.h  ln_node.h  log_node.h  multiplication_node.h  node.h  number_node.h  sin_node.h  subtraction_node.h  tan_node.h  trace.h  unary_op_node.h  variable_node.h
include/helpers/: arena_node_factory.h  builder.h  default_node_factory.h  expr.h  expr_helper.h  expr_operators.h  node_factory.h
include/memory/: allocation_config.h  arena.h  arena_allocator.h  default_allocator.h  expr_arena.h  iallocator.h  memory_policy.h
include/rewriting/: addition_constant_folding_rule.h  cse_rewriter.h  exp_division_rule.h  exp_power_rule.h  exp_product_rule.h  factorization_rule.h  ln_addition_rule.h  ln_difference_rule.h  ln_power_rule.h  log_addition_rule.h  log_difference_rule.h  multiplication_constant_folding_rule.h  negative_exp_rule.h  pythagorean_rule.h  rewrite_rule.h  rewriter.h
include/solver/: polynomial_solver.h  solver.h  token.h
include/tracing/: trace.h
src/expression/: addition_node.cpp  binary_op_node.cpp  cos_node.cpp  division_node.cpp  equality_node.cpp  exponentiation_node.cpp  function_node.cpp  ln_node.cpp  log_node.cpp  multiplication_node.cpp  node.cpp  number_node.cpp  sin_node.cpp  subtraction_node.cpp  tan_node.cpp  unary_op_node.cpp  variable_node.cpp
src/memory/: allocation_config.cpp  memory_policy.cpp
src/tracing/: trace.cpp
